# vsgi

./: .autom4te.cfg  .gitignore  AUTHORS  MAINTAINERS  Makefile.am  README.md  autogen.sh  configure.ac  vsgi-1.0.pc.in
src/: Makefile.am  app.vala  env.vala  main.vala  request.vala  response.vala
test/: .gitignore  Makefile.am  app_test.vala  env_test.vala  request_test.vala
